Should have fixed scrolling bug on firefox

--- a/src/Master.scss
+++ b/src/Master.scss
@@ -59,5 +59,6 @@ margin: 0;
         // background-color: #222222;
         position: relative;
         left: 50vw;
+        overflow: auto;
         }
 }
